syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Helloworld";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service HelloWorldService {
  rpc helloWorld(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
